# AgentBasedModeling

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  api.html  contributing.html  experiments.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js  todo.md
.github/workflows/: docs.yml
_modules/: abm_project.html  index.html
_modules/abm_project/: agent.html  batch_run_tools.html  kraan.html  mean_field.html  metrics.html  oop_model.html  plotting.html  test_module.html  utils.html  vectorised_model.html
_sources/: api.rst.txt  getting_started.rst.txt  index.rst.txt
docs/source/: api.rst  conf.py  contributing.rst  experiments.rst  getting_started.rst  index.rst
hooks/: export_requirements.sh
plots/data/: env_change_mem_count_10.csv  env_change_mem_count_100.csv  env_change_mem_count_20.csv  env_change_mem_count_30.csv  env_change_mem_count_40.csv  env_change_mem_count_50.csv  env_change_mem_count_60.csv  env_change_mem_count_70.csv  env_change_mem_count_80.csv  env_change_mem_count_90.csv
scripts/: appendix_fixed_point_actions.py  appendix_phase_portraits.py  base_model.py  cluster_vs_memory.py  cluster_vs_parameters.py  create_ccdfs.py  create_phase_plots.py  environment_vs_rationality_and_memory_phaseplot.py  equilibrium_env_vs_memory_and_rationality_measurements.py  kraan.py  measure_environment_varying_gamma_s_rationality.py  measure_eq_environment_for_varying_agent_adaptation.py  measure_eq_environment_for_varying_rationality.py  measure_fourier_power_varying_gamma_s.py  measure_time_series_env_varying_rationality.py  metrics.py  model_batch_sim.py  oop_model_batch.py  output.py  plot_environment_varying_gamma_s_rationality.py  plot_eq_environment_for_varying_agent_adaptation.py  plot_equilibrium_env_for_varying_rationality.py  plot_fourier_power_varying_gamma_s_rationality.py  plot_time_series_env_varying_rationality.py  sensitivity_analysis.py  sensitivity_analysis_outcome_measurements.py  sensitivity_analysis_plots.py  test_vec_model.py  test_vec_model_mod.py  v_model_batch.py  v_model_batch_mod.py
scripts/Archive/: base_model.py  cluster_vs_parameters.py  oop_model_batch.py  parameter_experiments.py  profile_code.py  sensitivity_analysis.py
src/abm_project/: __init__.py  agent.py  agent_risk_utility.py  batch_run_tools.py  cluster_analysis.py  kraan.py  mean_field.py  metrics.py  oop_model.py  plotting.py  plotting_cluster_analysis.py  sensitivity_analysis.py  test_module.py  utils.py  utils_phase_plt.py  vectorised_model.py
